[tool.poetry]
name = "misc-python"
version = "0.1.0"
description = ""
authors = ["Noah May <noahmouse2011@gmail.com>"]
readme = "README.md"
packages = [{include = "misc_python"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
numpy = "^1.25.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ipython = "^8.13.2"
ruff = "^0.0.269"
mypy = "^1.3.0"
pytest = "^7.3.2"
hypothesis = "^6.84.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
