[tool.poetry]
name = "misc-python"
version = "0.1.0"
description = ""
authors = ["Noah May <noahmouse2011@gmail.com>"]
readme = "README.md"
packages = [{ include = "misc_python" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
numpy = "^2.1.3"


[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"
ruff = "^0.7.3"
mypy = "^1.13.0"
pytest = "^8.3.3"
hypothesis = "^6.118.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# TODO: ruff.lint doesn't have autocomplete yet using vscode toml json schemas
[tool.ruff]
select = ["UP"]
