[project]
name = "misc-python"
version = "0.1.0"
description = ""
authors = [{name="Noah May <noahmouse2011@gmail.com>"}]
readme = "README.md"
requires-python = ">= 3.13"
dependencies = [
    "requests>=2.32.3",
    "numpy>=2.1.3",
]

[dependency-groups]
dev = [
    "ipython>=8.29.0",
    "ruff>=0.7.3",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "hypothesis>=6.118.2",
]

# TODO: ruff.lint doesn't have autocomplete yet using vscode toml json schemas
[tool.ruff]
select = ["UP"]

[tool.mypy]
allow_redefinition = true
