[package]
name = "rust-misc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.4.2"
itertools = "0.12.0"
# gmp-mpfr-sys = { version = "1.4.1", features=["use-system-libs"] }
rand = "0.8.5"
rug = "1.27.0"
serde_json = "1.0.120"
