[project]
name = "the_farmer_was_replaced"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Noah May", email = "noahmouse2011@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"

[tool.ruff]
lint.ignore = [
    "F821", # undefined name--Ruff doesn't currently support __builtins__.py
    "E711", # comparison to None--The game doesn't support `is None`
]

[tool.mypy]
files = ["farmers", "tests"]
disable_error_code = "name-defined" # mypy doesn't currently support __builtins__.py either
disallow_untyped_defs = true


[dependency-groups]
dev = [
    "hypothesis>=6.124.1",
    "mypy>=1.14.1",
    "ruff>=0.9.2",
]
