[project]
name = "z3-shenanigans"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "num2words>=0.5.14",
    "numpy>=2.3.2",
    "z3-solver>=4.15.3.0",
]

[dependency-groups]
dev = [
    "basedmypy>=2.10.0",
    "black>=25.1.0",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "ruff>=0.12.10",
]
